--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </a>
       </div>
       <div class="btn-container">
-          <a href="resume.html" class="btn" target="_blank"> My Resume </a>
+          <a href="image/resume.jpeg" class="btn"> My Resume </a>
       </div>
   </div>
 </section>
